--- a/src/App.scss
+++ b/src/App.scss
@@ -69,15 +69,21 @@
 
 
 .menu-list-item {
-    padding: 1rem 1.6rem;
-    font-size: 1.6rem;
+   
     color: white;
     cursor: pointer;
-   
+    transition: background-color .2s;
     &.active {
         background-color: #c3c6cb;
         color: #6b757e;
     }
+}
+
+
+.menu-item-link {
+    padding: 1rem 1.6rem;
+    font-size: 1.6rem;
+    display: block;
 }
 
 .menu-close {
@@ -119,9 +125,14 @@
 }
 
 .submenu-list-item {
+    transition: background-color .2s;
   
-   padding: .8rem 1.4rem;
-   font-size: 1.4rem;
+}
+
+.submenu-item-link {
+    padding: .8rem 1.4rem;
+    font-size: 1.4rem;
+    display: block;
 }
 
 .menu-list-item.active > .submenu-list,
