--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,16 @@
 html {
   box-sizing: border-box;
   font-size: 10px;
+
+  @media screen and (max-width: 1400px) {
+    font-size: 9px;
+  }
+  @media screen and (max-width: 1200px) {
+    font-size: 8px;
+  }
+  @media screen and (max-width: 1024px) {
+    font-size: 7px;
+  }
 }
 
 body {
