--- a/src/App.scss
+++ b/src/App.scss
@@ -48,15 +48,13 @@
 
 
 .layout-sidebar {
-    width: 24rem;
+  
     flex-shrink: 0;
     background-color: #6b757e;
     display: flex;
     flex-direction: column;
 
-    &.hidden {
-        display: none;
-    }
+    
 }
 
 
@@ -66,6 +64,10 @@
     background-color: #edeef0;
 }
 
+
+.menu-list {
+    width: 24rem;
+}
 
 
 .menu-list-item {
@@ -96,8 +98,15 @@
     background-color: #cfd0d4;
     border-top-left-radius: .5rem;
     border-bottom-left-radius: .5rem;
+    transform-origin: right center;
 
 }
+
+
+.layout-sidebar.hidden .menu-close {
+    transform: translateY(-50%) scaleX(-1);
+}
+
 
 .menu-close-arrow {
     position: absolute;
@@ -108,6 +117,11 @@
     width: 1.6rem;
     height: 1.6rem;
     
+}
+
+
+.layout-sidebar.hidden .menu-list {
+    display: none;
 }
 
 .submenu-list {
