--- a/src/App.scss
+++ b/src/App.scss
@@ -1,333 +1,376 @@
 .app {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-
 .layout-top-panel {
-    height: 5.5rem;
-    background-color: #e3dfd4;
-    color: #69757e;
-    padding: 0 1.6rem;
-    display: flex;
-    align-items: center;
+  height: 5.5rem;
+  background-color: #e3dfd4;
+  color: #69757e;
+  padding: 0 1.6rem;
+  display: flex;
+  align-items: center;
 }
 
 .menu {
-    position: relative;
-    flex-grow: 1;
-    z-index: 200;
+  position: relative;
+  flex-grow: 1;
+  z-index: 200;
 }
 
 .menu-btn {
-    width: 3.6rem;
-    height: 2.7rem;
-    border-radius: .2rem;
-    background-color: #6b757e;
-    position: relative;
+  width: 3.6rem;
+  height: 2.7rem;
+  border-radius: 0.2rem;
+  background-color: #6b757e;
+  position: relative;
 }
-
 
 .menu-btn-icon {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 1.2rem;
-    height: 1.2rem;
-    fill: #e3dfd4;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 1.2rem;
+  height: 1.2rem;
+  fill: #e3dfd4;
 }
-
-
 
 .layout-row {
-    display: flex;
-    flex-grow: 1;
+  display: flex;
+  flex-grow: 1;
 }
-
 
 .layout-sidebar {
-  
-    flex-shrink: 0;
-    background-color: #6b757e;
-    display: flex;
-    flex-direction: column;
-
-    
+  flex-shrink: 0;
+  background-color: #6b757e;
+  display: flex;
+  flex-direction: column;
 }
-
 
 .layout-main {
-    width: 50%;
-    flex-grow: 1;
-    background-color: #edeef0;
+  width: 50%;
+  flex-grow: 1;
+  background-color: #edeef0;
 }
 
-
-.menu-list {
-    width: 24rem;
+.layout-sidebar.hidden .menu-close {
+  transform: translateY(-50%) scaleX(-1);
 }
 
+.menu-content {
+  width: 24rem;
+}
 
-.menu-list-item {
-   
-    color: white;
-    cursor: pointer;
-    transition: background-color .2s;
-    &.active {
-        background-color: #c3c6cb;
-        color: #6b757e;
+.layout-sidebar.hidden .menu-content {
+  display: none;
+}
+
+.menu-item {
+  padding: 1rem 1.4rem;
+  color: white;
+  display: block;
+  transition: background-color 0.2s, color 0.2s;
+
+  &.hidden {
+      display: none;
+  }
+
+  &:hover {
+    background-color: #c3c6cb;
+    color: #6b757e;
+    & > .menu-item-dropdown {
+      opacity: 1;
+      visibility: visible;
+      transition: opacity 0.2s, visibility 0.2s;
+      z-index: 40;
     }
+  }
+
+  .menu-item-dropdown & {
+    color: #6b757e;
+    &:hover {
+      background-color: #dbdce0;
+    }
+  }
 }
 
+.menu-item-dropdown {
+  position: absolute;
+  left: 100%;
+  top: 0;
+  bottom: 0;
+  background-color: #c3c6cb;
+  width: 24rem;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.2s ease 0.2s, visibility 0s linear 0.4s;
+  z-index: 20;
+  border-left: 1px solid #6b757e;
+}
 
-.menu-item-link {
-    padding: 1rem 1.6rem;
-    font-size: 1.6rem;
-    display: block;
+.menu-item-search {
+  background-color: #fff;
+  padding: 1rem 1.4rem;
+
+  width: 100%;
+  display: block;
+  color: #6b757e;
+  &::placeholder {
+    color: #6b757e;
+  }
 }
 
 .menu-close {
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    height: 7rem;
-    width: 2rem;
-    background-color: #cfd0d4;
-    border-top-left-radius: .5rem;
-    border-bottom-left-radius: .5rem;
-    transform-origin: right center;
-
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 7rem;
+  width: 2rem;
+  background-color: #cfd0d4;
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  transform-origin: right center;
 }
-
-
-.layout-sidebar.hidden .menu-close {
-    transform: translateY(-50%) scaleX(-1);
-}
-
 
 .menu-close-arrow {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    fill: #6b757e;
-    width: 1.6rem;
-    height: 1.6rem;
-    
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  fill: #6b757e;
+  width: 1.6rem;
+  height: 1.6rem;
 }
 
 
-.layout-sidebar.hidden .menu-list {
-    display: none;
-}
-
-.submenu-list {
-    position: absolute;
-    left: 100%;
-    top: 0;
-    height: 100%;
-    width: 28rem;
-    background-color: #c3c6cb;
-    color: #6b757e;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity .3s, visibility 0s linear .3s;
-    border-left: 1px solid #6b757e;
-}
-
-.submenu-list-item {
-    transition: background-color .2s;
-  
-}
-
-.submenu-item-link {
-    padding: .8rem 1.4rem;
-    font-size: 1.4rem;
-    display: block;
-}
-
-.menu-list-item.active > .submenu-list,
-.submenu-list-item.active > .submenu-list {
-    opacity: 1;
-    visibility: visible;
-    transition: opacity .3s, visibility .3s;
+.graph-filters-download {
+  margin-left: auto;
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  background-color: #6b757e;
+  border-radius: .2rem;
 }
 
 
-.submenu-list-item.active  {
-    background-color: #dbdce0;
-    
+.graph-filters-download-icon {
+  width: 80%;
+  height: 80%;
+  fill: white;
+  flex-shrink: 0;
 }
+
+// .menu-list {
+//     width: 24rem;
+// }
+
+// .menu-list-item {
+
+//     color: white;
+//     cursor: pointer;
+//     transition: background-color .2s;
+//     &.active {
+//         background-color: #c3c6cb;
+//         color: #6b757e;
+//     }
+// }
+
+// .menu-item-link {
+//     padding: 1rem 1.6rem;
+//     font-size: 1.6rem;
+//     display: block;
+// }
+
+// .submenu-list {
+//     position: absolute;
+//     left: 100%;
+//     top: 0;
+//     height: 100%;
+//     width: 28rem;
+//     background-color: #c3c6cb;
+//     color: #6b757e;
+//     opacity: 0;
+//     visibility: hidden;
+//     transition: opacity .3s, visibility 0s linear .3s;
+//     border-left: 1px solid #6b757e;
+// }
+
+// .submenu-list-item {
+//     transition: background-color .2s;
+
+// }
+
+// .submenu-item-link {
+//     padding: .8rem 1.4rem;
+//     font-size: 1.4rem;
+//     display: block;
+// }
+
+// .menu-list-item.active > .submenu-list,
+// .submenu-list-item.active > .submenu-list {
+//     opacity: 1;
+//     visibility: visible;
+//     transition: opacity .3s, visibility .3s;
+// }
+
+// .submenu-list-item.active  {
+//     background-color: #dbdce0;
+
+// }
 
 .logout-btn {
-    margin-left: auto;
-    font-size: 1.4rem;
-    line-height: 1.2;
-    color: #6b757e;
+  margin-left: auto;
+  font-size: 1.4rem;
+  line-height: 1.2;
+  color: #6b757e;
 }
 
 .logout-btn-content {
-    display: inline-flex;
-    align-items: center;
+  display: inline-flex;
+  align-items: center;
 }
 
 .logout-btn-icon {
-    width: 1.8rem;
-    height: 1.8rem;
-    flex-shrink: 0;
-    margin-right: 1rem;
-    fill: #6b757e;
+  width: 1.8rem;
+  height: 1.8rem;
+  flex-shrink: 0;
+  margin-right: 1rem;
+  fill: #6b757e;
 }
 
 .page {
-    padding: 2rem;
+  padding: 2rem;
 }
 
-
 .page-heading {
-    font-size: 2.4rem;
-    margin-bottom: 2rem;
-    font-weight: 400;
+  font-size: 2.4rem;
+  margin-bottom: 2rem;
+  font-weight: 400;
 }
 
 .graph-filters {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
-
 
 .graph-period {
-    display: flex;
-    align-items: center;
-    margin-right: 3rem;
+  display: flex;
+  align-items: center;
+  margin-right: 3rem;
 }
-
 
 .graph-period-radio-input {
-    display: none;
+  display: none;
 }
-
 
 .graph-period-radio {
-   
- 
-    border: 1px solid #6b757e;
-    border-left: none;
-    user-select: none;
-    cursor: pointer;
-   
-    &:first-child {
-        border-top-left-radius: .4rem;
-        border-bottom-left-radius: .4rem;
-        border-left: 1px solid #6b757e;
-    }
+  border: 1px solid #6b757e;
+  border-left: none;
+  user-select: none;
+  cursor: pointer;
 
-    &:last-child {
-        border-top-right-radius: .4rem;
-        border-bottom-right-radius: .4rem;
-    }
+  &:first-child {
+    border-top-left-radius: 0.4rem;
+    border-bottom-left-radius: 0.4rem;
+    border-left: 1px solid #6b757e;
+  }
+
+  &:last-child {
+    border-top-right-radius: 0.4rem;
+    border-bottom-right-radius: 0.4rem;
+  }
 }
-
 
 .graph-period-radio-input {
-    display: none;
+  display: none;
 }
-
 
 .graph-period-radio-text {
-    font-size: 1.4rem;
-    padding: 0.8rem 1.2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    transition: all .2s;
-    color: #6b757e;
+  font-size: 1.4rem;
+  padding: 0.8rem 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  transition: all 0.2s;
+  color: #6b757e;
 }
-
 
 .graph-period-radio-input:checked .graph-period-radio {
-    background-color: #6b757e;
-    color: white;
+  background-color: #6b757e;
+  color: white;
 }
-
 
 .graph-period-radio-input:checked ~ .graph-period-radio-text {
-    background-color: #6b757e;
-    color: white;
+  background-color: #6b757e;
+  color: white;
 }
-
 
 .graph-filters-dates-range {
-    background-color: #6b757e;
-    padding: 0.6rem;
-    border-radius: .4rem;
-    display: flex;
-    align-items: center;
-    margin-right: 2rem;
-    input {
-        background-color: #fff;
-        border-radius: .4rem;
-        padding: 0.4rem;
-        font-size: 1.2rem;
-       
-    }
+  background-color: #6b757e;
+  padding: 0.6rem;
+  border-radius: 0.4rem;
+  display: flex;
+  align-items: center;
+  margin-right: 2rem;
+  input {
+    background-color: #fff;
+    border-radius: 0.4rem;
+    padding: 0.4rem;
+    font-size: 1.2rem;
+  }
 }
-
 
 .graph-filters-dates-range-picker {
-    margin-right: 1.5rem;
-    display: flex;
-    align-items: center;
-    
-    &:last-child {
-        margin-right: 0;
-    }
-}
+  margin-right: 1.5rem;
+  display: flex;
+  align-items: center;
 
+  &:last-child {
+    margin-right: 0;
+  }
+}
 
 .graph-filters-dates-range-picker-label {
-    font-size: 1.2rem;
-    margin-right: .8rem;
-    color: white;
+  font-size: 1.2rem;
+  margin-right: 0.8rem;
+  color: white;
 }
-
 
 .graph-filters-dates-range-picker-wrapper {
-    width: 9rem;
+  width: 9rem;
 }
-
 
 .graph-filters-dates-select {
-    display: flex;
-    align-items: center;
-    margin-right: 2rem;
-    &:last-child {
-        margin-right: 0;
-    }
+  display: flex;
+  align-items: center;
+  margin-right: 2rem;
+  &:last-child {
+    margin-right: 0;
+  }
 }
-
 
 .graph-filters-dates-select-label {
-    margin-right: 1rem;
-    font-size: 1.4rem;
-   color: #6b757e;
+  margin-right: 1rem;
+  font-size: 1.4rem;
+  color: #6b757e;
 }
-
 
 .graph-filters-dates-select-wrapper {
-    min-width: 20rem;
+  min-width: 20rem;
 }
 
-
 .chart {
-    padding: 3rem 0;
+  padding: 3rem 0;
 }
 
 .loader {
-    font-size: 2.4rem;
-    font-weight: 400;
+  font-size: 2.4rem;
+  font-weight: 400;
 }
